# permonsvm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  docgen  dummy.txt  flloprc  gmakefile  gmakefile.test  makefile  runsvmmpi
examples/: ex1.c  ex2.c  exbinfile.c  heart_scale  heart_scale.h5  heart_scale.svmlight  heart_scale.t  heart_scale.t.bin.info  heart_scale.t.h5  heart_scale.t.svmlight  makefile
examples/data/: heart_scale.t.h5
examples/output/: ex2.out  exbinfile_1.out
include/: makefile  permondummy.h  permonsvm.h  permonsvmio.h
include/permon/private/: svmimpl.h
include/private/: dummyimpl.h  svmimpl.h
lib/PermonDummy/conf/: permon_dummy_variables
lib/permonsvm/conf/: permonsvm_base  permonsvm_rules  permonsvm_test  permonsvm_variables
src/: makefile
src/docs/manualpages-sec/: header_Dummy
src/dummy/: makefile
src/dummy/impls/: makefile
src/dummy/interface/: dummy.c  makefile
src/svm/: makefile
src/svm/impls/: makefile
src/svm/impls/binary/: binary.c  binaryimpl.h  crossvalidation.c  cv.c  makefile
src/svm/impls/probability/: makefile  prob.c  probimpl.h
src/svm/interface/: crossval.c  dlregissvm.c  io.c  ioutils.h  makefile  svm.c  svmregis.c
src/svm/utils/: io.c  io.h  makefile  matutils.c  report.c  report.h
src/tutorials/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  exbinfile.c  makefile
src/tutorials/data/: heart_scale.h5
src/tutorials/output/: ex2.out  ex3.out  ex4_dual_violation.out  ex4_duality_gap.out  ex5.out  exbinfile_1.out
tools/: tool_svmlight_bin.py  tool_svmlight_hdf5.py
